substrate/frame/support/test/tests/pallet_ui/trait_constant_invalid_bound_lifetime.stderr
error: Invalid usage of `#[pallet::constant]`: Expected a type argument
  --> tests/pallet_ui/trait_constant_invalid_bound_lifetime.rs:26:15
   |
26 |         type U: Get<'static>;
   |                     ^^^^^^^
